# patmat

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: coverage.yml  pages.yml  rust.yml
benches/: match_analysis.rs
playground/: index.html  package-lock.json  package.json  vite.config.ts
playground-wasm/: Cargo.toml
playground-wasm/src/: lib.rs
playground/src/: main.tsx  styles.css
src/: engine.rs  interner.rs  lib.rs  match_input.rs  operations.rs  space.rs  tests.rs
src/engine/: cache.rs  decomposition.rs  flattening.rs  intersection.rs  match_analysis.rs  pruning.rs  simplify.rs  subspace.rs  subtraction.rs
tests/: engine.rs  integration.rs  non_clone.rs  support.rs
tests/cases/: demo_engine.rs  non_clone.rs  rich_engine.rs
tests/support/: demo.rs  mod.rs  rich.rs
