[package]
name = "patmat"
version = "0.4.0"
edition = "2024"
description = "Generic space algebra for pattern-match exhaustivity and reachability analysis"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gvozdvmozgu/patmat"

[workspace]
members = [".", "playground-wasm"]
resolver = "3"

[dependencies]
foldhash = "0.2.0"
hashbrown = "0.16"
indexmap = "2.11"

[dev-dependencies]
codspeed-criterion-compat = { version = "4.3", default-features = false }

[[bench]]
name = "match_analysis"
harness = false
